@@ -1,7 +1,13 @@
+2007-08-31  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-font.c: (enum_group_destroy), (cb_show_details),
+	(font_init), (font_shutdown):
+	* appearance.h: don't leak the enum groups
+
 2007-08-28  Gabor Kelemen  <kelemeng@gnome.hu>
 	
-	* data/appearance.glade: This time really fix bug 470532 (gtk-delete stock id is marked for
-	translation)
+	* data/appearance.glade: This time really fix bug 470532 (gtk-delete
+	stock id is marked for translation)
 
 2007-08-27  Jens Granseuer  <jensgr@gmx.net>
 
